--- a/src/app/pages/customer-create/address-info/address-info/address-info.html
+++ b/src/app/pages/customer-create/address-info/address-info/address-info.html
@@ -38,7 +38,7 @@
                             <select 
                                 formControlName="cityId" 
                                 (change)="onCityChange($event)" 
-                                class="mt-1 block w-full rounded-md bg-gray-50 border border-gray-300 shadow-inner focus:border-orange-500 focus:ring focus:ring-orange-500/50 sm:text-sm p-2.5 transition ease-in-out duration-150 appearance-none"
+                                class="mt-1 block w-full rounded-md border border-gray-300 shadow-inner focus:border-orange-500 focus:ring focus:ring-orange-500/50 sm:text-sm p-2.5 transition ease-in-out duration-150 appearance-none disabled:bg-gray-100 disabled:text-gray-500 disabled:cursor-not-allowed enabled:bg-white"
                             >
                                 <option value="" disabled selected>Select City</option>
                                 <option *ngFor="let c of cities" [value]="c.id">{{ c.name }}</option>
@@ -49,7 +49,8 @@
                             <label class="block text-sm font-medium text-gray-700">District <span class="text-red-500">*</span></label>
                             <select 
                                 formControlName="districtId" 
-                                class="mt-1 block w-full rounded-md bg-gray-50 border border-gray-300 shadow-inner focus:border-orange-500 focus:ring focus:ring-orange-500/50 sm:text-sm p-2.5 transition ease-in-out duration-150 appearance-none"
+                                (change)="onDistrictChange($event)"
+                                class="mt-1 block w-full rounded-md border border-gray-300 shadow-inner focus:border-orange-500 focus:ring focus:ring-orange-500/50 sm:text-sm p-2.5 transition ease-in-out duration-150 appearance-none disabled:bg-gray-100 disabled:text-gray-500 disabled:cursor-not-allowed enabled:bg-white"
                             >
                                 <option value="" disabled selected>Select District</option>
                                 <option *ngFor="let d of districts" [value]="d.id">{{ d.name }}</option>
@@ -61,7 +62,7 @@
                             <input 
                                 type="text" 
                                 formControlName="street" 
-                                class="mt-1 block w-full rounded-md bg-gray-50 border border-gray-300 shadow-inner focus:border-orange-500 focus:ring focus:ring-orange-500/50 sm:text-sm p-2.5 transition ease-in-out duration-150" 
+                                class="mt-1 block w-full rounded-md border border-gray-300 shadow-inner focus:border-orange-500 focus:ring focus:ring-orange-500/50 sm:text-sm p-2.5 transition ease-in-out duration-150 disabled:bg-gray-100 disabled:text-gray-500 disabled:cursor-not-allowed enabled:bg-white" 
                             />
                         </div>
 
@@ -71,7 +72,7 @@
                                 <input 
                                     type="text" 
                                     formControlName="houseNumber" 
-                                    class="mt-1 block w-full rounded-md bg-gray-50 border border-gray-300 shadow-inner focus:border-orange-500 focus:ring focus:ring-orange-500/50 sm:text-sm p-2.5 transition ease-in-out duration-150" 
+                                    class="mt-1 block w-full rounded-md border border-gray-300 shadow-inner focus:border-orange-500 focus:ring focus:ring-orange-500/50 sm:text-sm p-2.5 transition ease-in-out duration-150 disabled:bg-gray-100 disabled:text-gray-500 disabled:cursor-not-allowed enabled:bg-white" 
                                 />
                             </div>
                             <div>
@@ -79,7 +80,7 @@
                                 <input 
                                     type="text" 
                                     formControlName="description" 
-                                    class="mt-1 block w-full rounded-md bg-gray-50 border border-gray-300 shadow-inner focus:border-orange-500 focus:ring focus:ring-orange-500/50 sm:text-sm p-2.5 transition ease-in-out duration-150" 
+                                    class="mt-1 block w-full rounded-md border border-gray-300 shadow-inner focus:border-orange-500 focus:ring focus:ring-orange-500/50 sm:text-sm p-2.5 transition ease-in-out duration-150 disabled:bg-gray-100 disabled:text-gray-500 disabled:cursor-not-allowed enabled:bg-white" 
                                 />
                             </div>
                         </div>
